<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="250dp"
    android:padding="16dp"
    android:background="@color/success_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Success_Topic"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/success_topic"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Success_Type"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/success_type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Success_Size"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/success_size"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Success_Count"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/success_count"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Success_Close_Button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="@string/success_close_button" />

</LinearLayout>